--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "keystone": "https://github.com/keystonejs/keystone.git",
     "lodash": "^3.10.1",
     "materialize-css": "^0.97.3",
+    "node-sass": "^3.4.2",
     "node-sass-middleware": "^0.9.7"
   },
   "scripts": {
